# Physical-AI-Humanoid-Rebortic-Book

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  ERRORS_FIXED.md  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  RAG_CHATBOT_UPGRADE_PLAN.md  README.md  SECURITY.md  UPGRADE_ARCHITECTURE.md  UPGRADE_SUMMARY.md  brute_results.txt  check_qdrant.py  debug_qdrant.py  full_models.txt  main.py  pyproject.toml  test_auth_flow.py  test_chat_debug.py  test_chatbot_upgrade.py  test_detailed_error.py  test_gemini_direct.py  test_output.txt  test_output_unified.txt  test_output_unified_v2.txt  test_rag_upgrade.py  test_skill_log.txt  test_skill_output.txt  test_skill_output_v2.txt  test_skill_output_v3.txt  test_skill_output_v4.txt  test_skills_output.txt  test_throttled_output.txt  test_verification_8001.py  winner.txt
.claude/: settings.local.json
auth-service/: auth.js  index.js  package-lock.json  package.json  read_log.py  test_auth_req.py  test_db.js  test_manual_handler.js
backend/: Dockerfile  check_db.py  check_qdrant.py  reproduce_crash.py  requirements.txt  test_api_connection.py  test_components.py  test_features.py  test_out_of_scope.py  test_output.txt  test_skills.py
examples/: example_curl_commands.txt  example_doc.md
physical-ai-robotics-book/: .gitignore  README.md  build_error.txt  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
scripts/: __init__.py  check_stats.py  chunker.py  collect_chapters.py  embed_upsert.py  requirements.txt  reset_collection.py  run_ingestion.py
tests/: benchmark_search.py  brute_force_models.py  conftest.py  (+29 more)
(+165 files in other folders)
